--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "prisma": "^5.5.2",
     "swagger-ui-express": "^5.0.0"
   },
