--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "prisma": "^5.5.2",
