--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "imagekit": "^4.1.4",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "node-qr-image": "^0.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "prisma": "^5.5.2",
