--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "challenge4",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "jest --coverage",
+    "prod": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
