--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "@sentry/node": "^7.81.0",
+    "@sentry/profiling-node": "^1.2.6",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
@@ -21,6 +23,7 @@
     "express-session": "^1.17.3",
     "imagekit": "^4.1.4",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-qr-image": "^0.0.1",
     "passport": "^0.6.0",
