+ notification socket.io(-)

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "prisma": "^5.5.2",
+    "socket.io": "^4.7.2",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
